packages/optimizer/core/src/snapshots/qwik_core__test__example_6.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 189
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';
export const sym1 = $((ctx) => console.log("1"));

============================= test.tsx_sym1_aXUrPXX5Lak.tsx (ENTRY POINT)==

export const sym1_aXUrPXX5Lak = (ctx)=>console.log("1");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gCAEsB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "sym1_aXUrPXX5Lak",
  "entry": null,
  "displayName": "test.tsx_sym1",
  "hash": "aXUrPXX5Lak",
  "canonicalFilename": "test.tsx_sym1_aXUrPXX5Lak",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    72,
    97
  ],
  "paramNames": [
    "ctx"
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
//
const q_sym1_aXUrPXX5Lak = /*#__PURE__*/ qrl(()=>import("./test.tsx_sym1_aXUrPXX5Lak"), "sym1_aXUrPXX5Lak");
//
export const sym1 = q_sym1_aXUrPXX5Lak;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAEA,OAAO,MAAM,0BAAoC\"}")
== DIAGNOSTICS ==

[]
