packages/optimizer/core/src/snapshots/qwik_core__test__example_8.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 225
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';

export const Header = component$(() => {
	return $((hola) => {
		const hola = this;
		const {something, styff} = hola;
		const hello = hola.nothere.stuff[global];
		return (
			<Header/>
		);
	});
});

============================= test.tsx_Header_component_J4uyIhaBNR4.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
//
const q_Header_component_1_2B8d0oH9ZWc = /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_1_2B8d0oH9ZWc"), "Header_component_1_2B8d0oH9ZWc");
//
export const Header_component_J4uyIhaBNR4 = ()=>{
    return q_Header_component_1_2B8d0oH9ZWc;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;4CAGiC;IAChC;AAQD\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "test.tsx_Header_component_J4uyIhaBNR4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    249
  ]
}
*/
============================= test.tsx_Header_component_1_2B8d0oH9ZWc.tsx (ENTRY POINT)==

import { Header } from "./test";
//
export const Header_component_1_2B8d0oH9ZWc = (hola)=>{
    const hola = this;
    hola.nothere.stuff[global];
    return <Header/>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;8CAIU,CAAC;IACT,MAAM,OAAO,IAAI;IAEH,KAAK,OAAO,CAAC,KAAK,CAAC,OAAO;IACxC,QACE;AAEH\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_1_2B8d0oH9ZWc",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "2B8d0oH9ZWc",
  "canonicalFilename": "test.tsx_Header_component_1_2B8d0oH9ZWc",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_J4uyIhaBNR4",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    102,
    245
  ],
  "paramNames": [
    "hola"
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Header_component_J4uyIhaBNR4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Header_component_J4uyIhaBNR4"), "Header_component_J4uyIhaBNR4");
//
export const Header = /*#__PURE__*/ componentQrl(q_Header_component_J4uyIhaBNR4);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,uBAAS,6CASnB\"}")
== DIAGNOSTICS ==

[]
