packages/optimizer/core/src/snapshots/qwik_core__test__example_build_server.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 2732
expression: output
---
==INPUT==


import { component$, useStore, isDev, isServer as isServer2 } from '@qwik.dev/core';
import { isServer, isBrowser as isb } from '@qwik.dev/core/build';
import { mongodb } from 'mondodb';
import { threejs } from 'threejs';

import L from 'leaflet';

export const functionThatNeedsWindow = () => {
  if (isb) {
    console.log('l', L);
    console.log('hey');
    window.alert('hey');
  }
};

export const App = component$(() => {
	useMount$(() => {
		if (isServer) {
			console.log('server', mongodb());
		}
		if (isb) {
			console.log('browser', new threejs());
		}
	});
	return (
		<Cmp>
			{isServer2 && <p>server</p>}
			{isb && <p>server</p>}
		</Cmp>
	);
});

============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_s_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "s_ckEPmXZlub0");
//
export const functionThatNeedsWindow = ()=>{};
export const App = /*#__PURE__*/ componentQrl(q_s_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAQA,OAAO,MAAM,0BAA0B,KAMvC,EAAE;AAEF,OAAO,MAAM,oBAAM,8BAehB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { mongodb } from "mondodb";
//
export const s_ckEPmXZlub0 = ()=>{
    useMount$(()=>{
        console.log('server', mongodb());
    });
    return <Cmp>
			{<p>server</p>}
			{false}
		</Cmp>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;6BAgB8B;IAC7B,UAAU;QAER,QAAQ,GAAG,CAAC,UAAU;IAKxB;IACA,QACE,IAAI;GACJ,EAAe,EAAE,MAAM,EAAE,GAAG;GAC5B,OAAsB;EACvB,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    423,
    663
  ]
}
*/
== DIAGNOSTICS ==

[]
